validate: 2026-01-24-presto-trino-query-engine